Correção de bugs de Overflow

--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Belleza&family=Mohave:ital,wght@0,300..700;1,300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 
+html{
+  overflow-x: hidden;
+}
 
 body {
   font-family: Arial, sans-serif;
@@ -17,6 +20,8 @@ body {
   font-family: "Belleza";
   font-weight: 100;
   font-style: normal;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 /* Cabeçalho */
@@ -29,6 +34,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .title-header {
@@ -36,6 +42,7 @@ header {
   flex-direction: row;
   align-items: center;
 }
+
 
 header .logo {
   width: 110px;
